2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_fake_exit): Move closing the file
	descriptor to ...
	(main): ... here.

2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_fake_exit): Move function
	definition closer to other invoked_ functions.

2007-12-14  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (kindergarten_insert_child): Do not call
	invoked_send_fake_exit on failure.
	(main): If kindergarten_insert_child failed call
	invoked_send_fake_exit.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (child_clone): New function.
	(kindergarten_insert_child): Use child_clone instead of inline copy.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (alloc_childs): Rename to ...
	(kindergarten_new): ... this. Rename childs to kg. Fix all callers.
	(grow_childs): Rename to ...
	(kindergarten_grow): ... this. Rename childs to kg. Fix all callers.
	(release_childs): Rename to ...
	(kindergarten_destroy): ... this. Rename childs to kg. Fix all callers.
	(get_child_slot_by_pid): Rename to ...
	(kindergarten_get_child_slot_by_pid): ... this. Rename childs to kg.
	Fix all callers.
	(assign_child_slot): Rename to ...
	(kindergarten_insert_child): ... this. Rename childs to kg. Fix all
	callers.
	(release_child_slot): Rename to ...
	(kindergarten_release_child): ... this. Rename childs to kg. Fix all
	callers.
	(clean_childs): Rename to ...
	(kindergarten_reap_childs): ... this. Rename childs to kg. Fix all
	callers.
	(main): Rename childs to kg.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (child_destroy): New function.
	(release_childs): Use child_destroy instead of inline destroy.
	(release_child_slot): Likewise.

2007-12-07  Guillem Jover  <guillem.jover@nokia.com>

	* client/Makefile.am (PIE): Remove variable.
	(maemo_client_CPPFLAGS): Add $(PIC).